--- a/project-coffee/src/scss/blocks/_header.scss
+++ b/project-coffee/src/scss/blocks/_header.scss
@@ -87,6 +87,7 @@
             flex-direction: column;
             margin: 0 0 20px;
             width: 100%;
+            padding: 0;
         }
     }
 
